# forgery_localization_HLED

./: README.md
Codes/: compute_mcc.py  hilbert.py  test.py  train.py
Codes/radon_feat/: preprocess_single_v1.py
Codes/radon_feat/cuda-radon-transform/: CMakeLists.txt  KLT_LDA_features_PCA.py  KLT_LDA_features_classify_after_PCA.py  KLT_LDA_features_classify_gmm.py  KLT_LDA_features_precompute.py  KLT_LDA_features_visualize.py  KLT_LDA_iterate_features.py  KLT_LDA_patch_feature_vector.py  KLT_LDA_patch_feature_vector_ensemble.py  KLT_LDA_patch_feature_vector_keras.py  KLT_LDA_patch_feature_vector_keras_BATCH.py  README.md  anaconda_requirements.txt  build.sh  build_opencv_2.sh  clean.sh  dataset_medifor_patches.py  export_opencv_2.sh  plot_highestrocs.py  plot_reg_params.py  radon_transform_features.py  run_mscoco_splice_datasets.py  splice_utils.py  test_sinogram.py  trained_april_24_2017.zip.md5sum.txt  transform_parms_baseline.txt  transform_parms_detectme.txt  ubuntu_requirements.sh  utils.py
Codes/radon_feat/cuda-radon-transform/src/: CMakeLists.txt  OnlineAffineTransf.cpp  PythonCVMatConvert.cpp  PythonCVMatConvert.h  boost_python_interface.cpp  check_macros.h  convolutionTexture.cu  convolutionTexture.h  cuda_driver_errors.h  ocvutils.cpp  ocvutils.h  sinogram.cu  sinogram.h  sinogram_main.cpp  utils_RNG.h
Radon/: extract_radon_resamp_feat_image.py  extract_resamp_feat.py  test_sinogram.py  utils.py
Radon/fftw-3.3.6-pl2/: ChangeLog  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  fftw3.pc  libfftw3.la  libtool
Radon/fftw-3.3.6-pl2/.libs/: libfftw3.lai
Radon/fftw-3.3.6-pl2/api/: Makefile  Makefile.in
Radon/fftw-3.3.6-pl2/dft/: Makefile  Makefile.in
Radon/fftw-3.3.6-pl2/doc/: Makefile  fftw3.info  fftw3.info-1  fftw3.info-2  rfftwnd.eps  stamp-vti
Radon/fftw-3.3.6-pl2/genfft/: Makefile
Radon/fftw-3.3.6-pl2/kernel/: Makefile  Makefile.in
Radon/simplified-cuda-radon-transform/: test_sinogram.py
model/: checkpoint  final_model_nist.ckpt.index  ieee_EnDeode_5_best_Miu.ckpt.index
synthetic_data/: README.md  splice_masks_copymove.py  splice_masks_onto_pristine_images_2.py
test_data/: test_imgs_feat_v2.hdf5  test_imgs_v2.hdf5
(+2613 files in other folders)
